# gotaglio

./: .credentials.json.template  .gitignore  CHANGES.md  README.md  TODO.md  gotag.bat  gotag.py  gotag.sh  models.json  models.json.template  pyproject.toml  simple.bat  simple.sh
.devcontainer/: devcontainer.json  setup.sh
.github/instructions/: python.instructions.md
.github/workflows/: publish.yaml
apps/: example.py  menu.py  simple.py
data/: cases.json  small.json  suite.json  template.txt
data/api/: cases.json  template.txt
data/menu/: small.json
documentation/: clone.md  codespaces.md  concepts.md  dag..md  diagrams.drawio  future.md  menu.md  models.md  pipelines.md  realtime.md  samples.md  simple.md  terminology.md  tool.md  usage.md
endpoints/: pyproject.toml  realtime.py  realtime_prompt_template.txt  realtime_test.html
endpoints/prompt_templates/typescript/: menu.ts  ts_menu.md
gotaglio/: __init__.py  azure_openai_realtime.py  bool_ops.py  compare.py  constants.py  dag.py  director.py  director2.py  exceptions.py  format.py  git.py  gotag.py  helpers.py  lazy_imports.py  main.py  make_console.py  mocks.py  models.py  pipeline.py  pipeline2.py  pipeline_spec.py  realtime_utils.py  registry.py  repair.py  runner.py  shared.py  summarize.py  templating.py  test.py  test2.py  tokenizer.py
gotaglio/subcommands/: compare_cmd.py  format.py  format_cmd.py  help.py  history.py  history_cmd.py  list_models_cmd.py  list_pipelines_cmd.py  run.py  run_cmd.py  summarize.py  summarize_cmd.py
gotaglio/tools/: constants.py  exceptions.py  exceptions2.py  helpers.py  main.py  models.py  pipeline.py  pipelines.py  repair.py  run.py  runner.py  shared.py  templating.py
gotaglio/tools/subcommands/: add_ids.py  compare.py  format.py  help.py  history.py  list_models.py  list_pipelines.py  models.py  pipelines.py  rerun.py  run.py  summarize.py
performance/: measure_imports.py  simple_test.py  test_clean_import.py  test_subprocess_import.py
planning/: 2025-08-26-azure-openai-realtime.md  AzureOpenAIRealtimeRefactor.md  README.md  feature-plan-template.md  github-issue-template.md  implementation-plan-template.md
planning/2025-08-26-azure-openai-realtime/: feature-plan.md  implementation-plan.md
planning/2025-08-27-audio-case-model-validation/: feature-plan.md  implementation-plan.md
planning/2025-08-28-realtime-event-timers/: feature-plan.md  github-issue.md  implementation-plan.md
planning/2025-08-28-realtime-prompt-update/: feature-plan.md  github-issue.md  implementation-plan.md
planning/2025-08-28-realtime-session-config/: feature-plan.md  github-issue.md  implementation-plan.md
samples/: api.py  example.py  main.py  menu.py  test_pipeline_spec.py
samples/calc/: calc.ipynb  calc.py
samples/calc/data/: cases.yaml
samples/dag/: cases.json  dag.ipynb  dag.py
samples/dag/data/: cases.yaml
samples/menu/: menu.ipynb  menu.py  pyrightconfig.json
samples/menu/data/: template.txt
samples/realtime/: README.md  realtime.ipynb  realtime.py
samples/simple/: cases.json  simple.ipynb  simple.py  template.txt
samples/turns/: cases.json  simple.ipynb  simple.py
samples2/: main.py
samples2/calc/: calc.ipynb  calc.py
samples2/dag/: dag.ipynb  dag.py
samples2/menu/: menu.ipynb  menu.py
samples2/restaurant/: restaurant.py
samples2/simple/: simple.py
tests/: test_audio_case_model_validation.py  test_azure_openai_realtime.py  test_bool_ops.py  test_dag.py  test_event_timestamps.py  test_models.py  test_pipeline.py  test_realtime_events.py  test_realtime_model.py
(+3 files in other folders)
