[project]
name = "gotaglio"
version = "0.1.0"
description = "Framework for creating and running experiment pipelines"
authors = [
    {name = "Mike Hopcroft",email = "mhopcroft@gmail.com"}
]
license = "MIT"
readme = "README.md"
homwepage = "https://github.com/MikeHopcroft/gotaglio"
repository = "https://github.com/MikeHopcroft/gotaglio"
requires-python = ">=3.12"
dependencies = [
    "jinja2 (>=3.1.5,<4.0.0)",
    "openai (>=1.59.7,<2.0.0)",
    "azure-ai-inference (>=1.0.0b7,<2.0.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "numpy (>=2.2.1,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "glom (>=24.11.0,<25.0.0)",
    "pyparsing (>=3.2.1,<4.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"

