[tool.poetry]
name = "gotaglio"
version = "0.2.2"
description = "Framework for creating and running experiment pipelines"
authors = ["Mike Hopcroft <mhopcroft@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MikeHopcroft/gotaglio"
repository = "https://github.com/MikeHopcroft/gotaglio"
keywords = ["pipeline", "experiments", "llm", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "gotaglio" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.poetry.dependencies]
python = ">=3.12"
jinja2 = "^3.1.5"
openai = "^1.59.7"
azure-ai-inference = "^1.0.0b7"
gitpython = "^3.1.44"
numpy = "^2.2.1"
scipy = "^1.15.1"
glom = "^24.11.0"
pyparsing = "^3.2.1"
rich = "^13.9.4"
tiktoken = "^0.9.0"
nest-asyncio = "^1.6.0"
pydantic = "^2.11.7"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
