[tool.poetry]
name = "gotaglio-realtime-endpoint"
version = "0.1.0"
description = "A FastAPI-based realtime proxy endpoint for Azure OpenAI."

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = { version = "^0.34", extras = ["standard"] }
aiohttp = "^3.9.5"
python-dotenv = "^1.0.1"
pydantic = "^2.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
